Creado endpoint para consultar el listado de temporadas en el que sale un personaje, junto a la lista de episodios en los que aparece